--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="images">
+    <file>images/images/load_btn.png</file>
+    <file>images/images/detect_btn.png</file>
     <file>images/images/PyDracula.png</file>
     <file>images/images/PyDracula_vertical.png</file>
   </qresource>
